--- a/index.html
+++ b/index.html
@@ -109,15 +109,14 @@
 					</div>
 				</div>
 
-				<!-- BACK END -->
+				<!-- Back end -->
 				<div class="col-4">
-
 					<p>Back end</p>
 					<!-- Python -->
 					<div class="row">
 						<!-- skill icon -->
 						<div class="col-1">
-							<i class="fab fa-python"></i>
+							<i class="fab fa-python"></i>					
 						</div>
 
 						<!-- skill name -->
@@ -126,7 +125,7 @@
 						</div>
 					</div>
 
-					<!-- JS -->
+					<!-- Django -->
 					<div class="row">
 						<!-- skill icon -->
 						<div class="col-1">
@@ -135,7 +134,20 @@
 
 						<!-- skill name -->
 						<div class="col-11">
-							Django
+							<p>Django</p>
+						</div>
+					</div>
+
+					<!-- MySQL -->
+					<div class="row">
+						<!-- skill icon -->
+						<div class="col-1">
+							<i class="fas fa-database"></i>
+						</div>
+
+						<!-- skill name -->
+						<div class="col-11">
+							MySQL
 						</div>
 					</div>
 				</div>
@@ -143,7 +155,6 @@
 				
 				<!-- Design -->
 				<div class="col-4">
-
 					<p>Design</p>
 					<!-- Photoshop -->
 					<div class="row">
@@ -155,6 +166,19 @@
 						<!-- skill name -->
 						<div class="col-11">
 							<p>Adobe Photoshop</p>
+						</div>
+					</div>
+
+					<!-- Adobe AfterEffects -->
+					<div class="row">
+						<!-- skill icon -->
+						<div class="col-1">
+							Ae						
+						</div>
+
+						<!-- skill name -->
+						<div class="col-11">
+							<p>Adobe After Effects</p>
 						</div>
 					</div>
 
@@ -170,7 +194,6 @@
 							Blender 3D
 						</div>
 					</div>
-
 				</div>
 
 			</div>
