--- a/index.html
+++ b/index.html
@@ -42,20 +42,20 @@
 
 				<div class="col-3 panel-button-container">
 					<div class="panel-button">
-						<center>-</center> 
+						<center>Personal info</center> 
 					</div>
 
 				</div>
 
 				<div class="col-3 panel-button-container">
 					<div class="panel-button">
-						<center>-</center> 
+						<center>Education</center> 
 					</div>
 				</div>
 
 				<div class="col-3 panel-button-container">
 					<div class="panel-button">
-						<center>-</center> 
+						<center>Languages</center> 
 					</div>
 				</div>
 			</div>
@@ -66,37 +66,80 @@
 			<div class="row">
 
 				<!-- Front end -->
-				<div class="col-4">
+				<ul class="col-4">
 
 					<p>Front end</p>
 					<!-- HTML -->
-					<div class="row">
+					<li class="row">
 						<!-- skill icon -->
 						<div class="col-1">
-							<i class="fab fa-html5"></i>
+							<i class="fab fa-html5 header-orange"></i>
 						</div>
 
 						<!-- skill name -->
-						<div class="col-11">
+						<div class="col-5 header-orange">
 							<p>HTML</p>
 						</div>
-					</div>
+
+						<!-- skill bar -->
+						<div class="col-6">
+							<div class="row">
+								<div class="col-1">
+									<i class="fas fa-square-full"></i>
+								</div>
+								<div class="col-1">
+									<i class="fas fa-square-full"></i>
+								</div>
+								<div class="col-1">
+									<i class="fas fa-square-full"></i>
+								</div>
+								<div class="col-1">
+									<i class="fas fa-square-full"></i>
+								</div>
+								<div class="col-1">
+									<i class="fas fa-square-full"></i>
+								</div>
+							</div>
+						</div>
+					</li>
 
 					<!-- JS -->
-					<div class="row">
+					<li class="row">
 						<!-- skill icon -->
 						<div class="col-1">
 							<i class="fab fa-js"></i>
 						</div>
 
 						<!-- skill name -->
-						<div class="col-11">
+						<div class="col-5">
 							<p>JavaScript</p>
 						</div>
-					</div>
+
+						<!-- skill bar -->
+						<div class="col-6">
+							<div class="row">
+								<div class="col-1">
+									<i class="fas fa-square-full"></i>
+								</div>
+								<div class="col-1">
+									<i class="fas fa-square-full"></i>
+								</div>
+								<div class="col-1">
+									<i class="fas fa-square-full"></i>
+								</div>
+								<div class="col-1">
+									<i class="fas fa-square-full"></i>
+								</div>
+								<div class="col-1">
+									<i class="fas fa-square-full"></i>
+								</div>
+							</div>
+						</div>
+
+					</li>
 
 					<!-- CSS -->
-					<div class="row">
+					<li class="row">
 						<!-- skill icon -->
 						<div class="col-1">
 							<i class="fab fa-css3-alt"></i>
@@ -106,14 +149,35 @@
 						<div class="col-5">
 							<p>CSS</p>
 						</div>
-					</div>
-				</div>
+
+						<!-- skill bar -->
+						<div class="col-6">
+							<div class="row">
+								<div class="col-1">
+									<i class="fas fa-square-full"></i>
+								</div>
+								<div class="col-1">
+									<i class="fas fa-square-full"></i>
+								</div>
+								<div class="col-1">
+									<i class="fas fa-square-full"></i>
+								</div>
+								<div class="col-1">
+									<i class="fas fa-square-full"></i>
+								</div>
+								<div class="col-1">
+									<i class="fas fa-square-full"></i>
+								</div>
+							</div>
+						</div>
+					</li>
+				</ul>
 
 				<!-- Back end -->
-				<div class="col-4">
+				<ul class="col-4">
 					<p>Back end</p>
 					<!-- Python -->
-					<div class="row">
+					<li class="row">
 						<!-- skill icon -->
 						<div class="col-1">
 							<i class="fab fa-python"></i>					
@@ -123,10 +187,31 @@
 						<div class="col-5">
 							<p>Python</p>
 						</div>
-					</div>
+
+						<!-- skill bar -->
+						<div class="col-6">
+							<div class="row">
+								<div class="col-1">
+									<i class="fas fa-square-full"></i>
+								</div>
+								<div class="col-1">
+									<i class="fas fa-square-full"></i>
+								</div>
+								<div class="col-1">
+									<i class="fas fa-square-full"></i>
+								</div>
+								<div class="col-1">
+									<i class="fas fa-square-full"></i>
+								</div>
+								<div class="col-1">
+									<i class="fas fa-square-full"></i>
+								</div>
+							</div>
+						</div>
+					</li>
 
 					<!-- Django -->
-					<div class="row">
+					<li class="row">
 						<!-- skill icon -->
 						<div class="col-1">
 							<i class="fab fa-python"></i>
@@ -136,10 +221,31 @@
 						<div class="col-5">
 							<p>Django</p>
 						</div>
-					</div>
+
+						<!-- skill bar -->
+						<div class="col-6">
+							<div class="row">
+								<div class="col-1">
+									<i class="fas fa-square-full"></i>
+								</div>
+								<div class="col-1">
+									<i class="fas fa-square-full"></i>
+								</div>
+								<div class="col-1">
+									<i class="fas fa-square-full"></i>
+								</div>
+								<div class="col-1">
+									<i class="fas fa-square-full"></i>
+								</div>
+								<div class="col-1">
+									<i class="fas fa-square-full"></i>
+								</div>
+							</div>
+						</div>
+					</li>
 
 					<!-- MySQL -->
-					<div class="row">
+					<li class="row">
 						<!-- skill icon -->
 						<div class="col-1">
 							<i class="fas fa-database"></i>
@@ -149,53 +255,144 @@
 						<div class="col-5">
 							MySQL
 						</div>
-					</div>
-				</div>
+
+						<!-- skill bar -->
+						<div class="col-6">
+							<div class="row">
+								<div class="col-1">
+									<i class="fas fa-square-full"></i>
+								</div>
+								<div class="col-1">
+									<i class="fas fa-square-full"></i>
+								</div>
+								<div class="col-1">
+									<i class="fas fa-square-full"></i>
+								</div>
+								<div class="col-1">
+									<i class="fas fa-square-full"></i>
+								</div>
+								<div class="col-1">
+									<i class="fas fa-square-full"></i>
+								</div>
+							</div>
+						</div>
+					</li>
+				</ul>
 
 				
 				<!-- Design -->
-				<div class="col-4">
+				<ul class="col-4">
 					<p>Design</p>
 					<!-- Photoshop -->
-					<div class="row">
+					<li class="row">
 						<!-- skill icon -->
 						<div class="col-1">
 							Ps						
 						</div>
 
 						<!-- skill name -->
-						<div class="col-11">
+						<div class="col-5">
 							<p>Adobe Photoshop</p>
 						</div>
-					</div>
+
+						<!-- skill bar -->
+						<div class="col-6">
+							<div class="row">
+								<div class="col-1">
+									<i class="fas fa-square-full"></i>
+								</div>
+								<div class="col-1">
+									<i class="fas fa-square-full"></i>
+								</div>
+								<div class="col-1">
+									<i class="fas fa-square-full"></i>
+								</div>
+								<div class="col-1">
+									<i class="fas fa-square-full"></i>
+								</div>
+								<div class="col-1">
+									<i class="fas fa-square-full"></i>
+								</div>
+							</div>
+						</div>
+					</li>
 
 					<!-- Adobe AfterEffects -->
-					<div class="row">
+					<li class="row">
 						<!-- skill icon -->
 						<div class="col-1">
 							Ae						
 						</div>
 
 						<!-- skill name -->
-						<div class="col-11">
+						<div class="col-5">
 							<p>Adobe After Effects</p>
 						</div>
-					</div>
+
+						<!-- skill bar -->
+						<div class="col-6">
+							<div class="row">
+								<div class="col-1">
+									<i class="fas fa-square-full"></i>
+								</div>
+								<div class="col-1">
+									<i class="fas fa-square-full"></i>
+								</div>
+								<div class="col-1">
+									<i class="fas fa-square-full"></i>
+								</div>
+								<div class="col-1">
+									<i class="fas fa-square-full"></i>
+								</div>
+								<div class="col-1">
+									<i class="fas fa-square-full"></i>
+								</div>
+							</div>
+						</div>
+					</li>
 
 					<!-- Blender 3D-->
-					<div class="row">
+					<li class="row">
 						<!-- skill icon -->
 						<div class="col-1">
 							<i class="fas fa-cube"></i>
 						</div>
 
 						<!-- skill name -->
-						<div class="col-11">
+						<div class="col-5">
 							Blender 3D
 						</div>
-					</div>
-				</div>
 
+						<!-- skill bar -->
+						<div class="col-6">
+							<div class="row">
+								<div class="col-1">
+									<i class="fas fa-square-full"></i>
+								</div>
+								<div class="col-1">
+									<i class="fas fa-square-full"></i>
+								</div>
+								<div class="col-1">
+									<i class="fas fa-square-full"></i>
+								</div>
+								<div class="col-1">
+									<i class="fas fa-square-full"></i>
+								</div>
+								<div class="col-1">
+									<i class="fas fa-square-full"></i>
+								</div>
+							</div>
+						</div>
+					</li>
+				</ul>
+			</div>
+
+			<!-- Skill Description -->
+			<div class="row panel-light">
+				<div class="col skill-description">
+
+					<center><h4>HTML</h4></center>
+				</div>
 			</div>
 		</div>
 	</div>
